--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banshee-44",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "banshee-44.com",
   "license": "MIT",
   "author": "Alex Tennant <alex@adtennant.co.uk>",
@@ -22,6 +22,7 @@
     "eslint-utils": "^1.4.1",
     "husky": "^3.0.8",
     "lint-staged": "^9.4.1",
+    "localforage": "^1.7.3",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
