--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "banshee-44",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "banshee-44.com",
   "license": "MIT",
   "author": "Alex Tennant <alex@adtennant.co.uk>",
@@ -19,6 +19,7 @@
     "@types/node": "12.7.3",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "classnames": "^2.2.6",
     "eslint-utils": "^1.4.1",
     "husky": "^3.0.8",
     "lint-staged": "^9.4.1",
@@ -36,6 +37,7 @@
     "typescript": "3.6.2"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/react-redux": "7.1.1",
     "@types/redux-logger": "^3.0.7"
   },
